# C-Laboratory

LAB 4- Basic C/: main
LAB 5- Static Arrays/: CMakeLists.txt  lab5.h  main.c
LAB 5- Static Arrays/Pgrm Specs/: cscd240lab5 starter code.txt
LAB 7- FilesAndArrays/FilesAndArrays/lab8-files_dynamic_arrays/: CMakeLists.txt  cscd240Lab7.c  lab7.c  lab7.h
LAB 7- FilesAndArrays/FilesAndArrays/lab8-files_dynamic_arrays/utils/: fileUtils.c  sortUtils.c
Lab 4- Basic C/: cscd240lab4out.txt
Lab 4- Basic C /LAB4/: main.c
Lab 5/: cscd240lab5out.txt  lab5.c  main
